tests/compilation_tests/import_functions/arrays_out_inner_refs.stderr
error: import function can't return a value with references
  --> $DIR/arrays_out_inner_refs.rs:10:5
   |
10 |     #[marine]
   |     ^
